[package]
name = "solana_wallet"
version = "0.1.0"
edition = "2024"

[dependencies]
solana-client = "1.18"
solana-sdk = "1.18"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
